@@ -141,7 +141,8 @@
 				{
 					id: 888,
 					title: 'Meeting',
-					start: new Date(y, m, d, 10, 30)
+					start: new Date(y, m, d, 10, 30),
+					allDay: false
 				},
 				{
 					id: 777,
